--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap'); */
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,6 +12,10 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    font-family: "Space Grotesk", sans-serif;
+    /* font-family: "Pangolin", cursive; */
+    font-weight: 400;
+    font-style: normal;
   }
 
   header {
