--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
 /* @import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap'); */
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100vh;
+}
+
 body {
     margin: 0;
     background-color: #c9e2e8;
-    height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     font-family: "Space Grotesk", sans-serif;
@@ -30,7 +37,7 @@ body {
   }
   
   main {
-    margin-top: 5rem;
+    margin-top: 2rem;
     text-align: center;
     display: flex;
     flex-direction: column;
