--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,19 @@
 @tailwind components;
 @tailwind utilities;
 
+.undo-btn {
+  @apply bg-blue-500 text-white hover:bg-blue-600;
+}
+
+.complete-btn {
+  @apply bg-green-500 text-white hover:bg-green-600;
+}
+
+.delete-btn {
+  @apply bg-red-500 text-white hover:bg-red-600;
+}
+
+
 * {
   box-sizing: border-box;
 }
@@ -15,7 +28,8 @@ html {
 
 body {
     margin: 0;
-    background-color: #c9e2e8;
+    /* background-color: #c9e2e8; */
+    background-color: #636361;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -27,11 +41,11 @@ body {
 
   header {
     padding: 32px;
-    background-color: #6f8ca8;
+    background-color: #464343;
   }
   
   h1 {
-    color: #333;
+    color: #f7f6f6;
     text-align: center;
     font-size: 24px;
   }
@@ -46,7 +60,7 @@ body {
   }
   
   button {
-    background-color: #007bff;
+    background-color: #464343;
     color: white;
     border: none;
     padding: 7px 15px;
@@ -72,16 +86,13 @@ body {
   }
   
   li {
-    background-color: #eee;
-    padding: 10px;
-    margin: 5px 0;
-    border-radius: 5px;
+    background-color: #464343;
+    color: white;
+    padding: 5px 10px;
+    margin: 8px 0;
+    border-radius: 50px;
   }
-  
-  .reset-button {
-    background-color: #dc3545;
-  }
-  
-  .reset-button:hover {
-    background-color: #c82333;
+
+  li:hover {
+    background-color: #212020;
   }
