--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,15 +6,15 @@
 @tailwind utilities;
 
 .undo-btn {
-  @apply bg-blue-500 text-white hover:bg-blue-600;
+  @apply text-white hover:bg-blue-600;
 }
 
 .complete-btn {
-  @apply bg-green-500 text-white hover:bg-green-600;
+  @apply text-white hover:bg-green-600;
 }
 
 .delete-btn {
-  @apply bg-red-500 text-white hover:bg-red-600;
+  @apply text-white hover:bg-red-600;
 }
 
 * {
@@ -27,7 +27,6 @@ html {
 
 body {
     margin: 0;
-    /* background-color: #c9e2e8; */
     background-color: #636361;
     min-height: 100%;
     display: flex;
@@ -59,19 +58,12 @@ body {
   }
   
   button {
-    background-color: #464343;
-    color: white;
-    border: none;
-    padding: 7px 15px;
+    padding: 7px 7px;
     margin: 10px;
     font-size: 16px;
     cursor: pointer;
-    border-radius: 5px;
+    border-radius: 12px;
     transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
   }
   
   p {
@@ -89,9 +81,17 @@ body {
     color: white;
     padding: 5px 10px;
     margin: 8px 0;
-    border-radius: 50px;
+    border-radius: 30px;
   }
 
   li:hover {
-    background-color: #212020;
+    background-color: #353232;
   }
+
+  select {
+/*     width: 150px;
+    max-width: 150px; */
+    border-radius: 30px;
+    /* -webkit-appearance: none; */
+  }
+  
